force-app/main/default/objects/Pro_Bundle__mdt/Pro_Bundle__mdt.object-meta.xml
<CustomObject>
    <description>Mapping for Pro Bundle relationships</description>
    <label>Pro Bundle</label>
    <pluralLabel>Pro Bundles</pluralLabel>
</CustomObject>