force-app/main/default/objects/Pro_Bundle__mdt/fields/New_Parent_SKU__c.field-meta.xml
<CustomField>
    <fullName>New_Parent_SKU__c</fullName>
    <label>New Parent SKU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>