force-app/main/default/objects/Pro_Bundle__mdt/fields/OLD_SKU_Name__c.field-meta.xml
<CustomField>
    <fullName>OLD_SKU_Name__c</fullName>
    <label>OLD SKU Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>