force-app/main/default/objects/Pro_Bundle__mdt/fields/Software_Support__c.field-meta.xml
<CustomField>
    <fullName>Software_Support__c</fullName>
    <label>Software Support`</label>
    <length>100</length>
    <type>Text</type>
</CustomField>