force-app/main/default/objects/Pro_Bundle__mdt/fields/Support__c.field-meta.xml
<CustomField>
    <fullName>Support__c</fullName>
    <label>Support</label>
    <length>255</length>
    <type>Text</type>
</CustomField>