force-app/main/default/objects/Pro_Bundle__mdt/listViews/PE_PP_only.listView-meta.xml
<ListView>
    <fullName>PE_PP_only</fullName>
    <columns>MasterLabel</columns>
    <columns>OLD_SKU_Name__c</columns>
    <columns>Support__c</columns>
    <columns>New_Parent_SKU__c</columns>
    <columns>Software_Support__c</columns>
    <columns>Product_1__c</columns>
    <columns>Product_2__c</columns>
    <columns>Payment_Option__c</columns>
    <columns>Support_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>PE-PP only</label>
</ListView>